# OS-labs

kp/: CMakeLists.txt  KP-report.odt
kp/src/: a.c  b.c  c.c
lab1/: report.docx
lab2/doc/: report.doc
lab2/src/: child.cpp  main.cpp
lab3/doc/: report.docx
lab3/src/: main.cpp
lab4/doc/: report.docx
lab4/src/: child.cpp  main.cpp
lab5/: CMakeLists.txt
lab5/doc/: report .docx
lab5/include/: lib.h
lab5/src/: lib1.c  lib2.c  main1.c  main2.c
lab6/doc/: report.docx
lab6/src/: client.cpp  config.cpp  config.h  interface.cpp  interface.h  server.cpp  tree.cpp  tree.h
